tdf#107094 backward heading search doesn't always work

regression from...

commit 84e44386d70e886f9bae633ebe915ea3a52f8dbd
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Nov 12 10:35:18 2014 +0000

    coverity#982189 Unchecked return value

so put it back the way it was and explicitly ignore the return
instead

    Change-Id: I6f5ef42b38236ea5f70ddbccfa25a81f2f3e976c

Change-Id: I0c0084247e8570ace2198fa893db273dab00d2b0